# wsl2-ip-host

./: Cargo.toml  README.md
cli/: Cargo.toml  build.rs
cli/src/: main.rs
main/: Cargo.toml
main/src/: lib.rs
src/: main.rs
win/: Cargo.toml
win/src/: main.rs  ui.rs
writer/: Cargo.toml  build.rs  wsl2-ip-host-writer.exe.rc
writer/src/: main.rs
