[package]
name = "wsl2-ip-host-win"
version = "0.7.0"
authors = ["fiburonsk <10441670+fiburonsk@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "wsl2-ip-host-gui"
path = "src/main.rs"

[dependencies]
main = { path = "../main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nwg = { version = "1.0.9", package = "native-windows-gui", features = ["tray-notification", "image-decoder", "flexbox", "frame", "menu"]}
home = "0.5.3"
