[package]
name = "wsl2-ip-host-win"
version = "1.1.0"
authors = ["fiburonsk <10441670+fiburonsk@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "wsl2-ip-host-gui"
path = "src/main.rs"

[dependencies]
main = { path = "../main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.3"
notify-rust = "4.2"

[target.'cfg(windows)'.dependencies]
nwg = { version = "1.0.10", package = "native-windows-gui", features = ["tray-notification", "image-decoder", "flexbox", "frame", "menu"]}
winapi = { version = "0.3", features = ["shellapi"] }

[build-dependencies]
winres = "0.1"
