[package]
name = "wsl2-ip-host"
version = "1.6.0"
authors = ["fiburonsk <10441670+fiburonsk@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "wsl2-ip-host"
path = "src/main.rs"

[dependencies]
main = { path = "../main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.3"
notify-rust = "4.2"

[target.'cfg(windows)'.dependencies]
nwg = { version = "1.0.10", package = "native-windows-gui", features = ["tray-notification", "image-decoder", "flexbox", "frame", "menu"]}

[build-dependencies]
winres = "0.1"
